--- a/portfolios.html
+++ b/portfolios.html
@@ -157,7 +157,7 @@
 
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/17252668970620316560_0" alt="Modern Estate Exterior">
+                    <img src="images/The Riverside Estate.png" alt="Modern Estate Exterior">
                     <div class="portfolio-overlay">
                         <h3>The Riverside Estate</h3>
                         <p>A 5,000 sq. ft. modern marvel featuring floor-to-ceiling glass and sustainable materials.</p>
