--- a/portfolios.html
+++ b/portfolios.html
@@ -165,7 +165,7 @@
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/6068029535658670972_0" alt="Modern Luxury Kitchen">
+                    <img src="images/modern kitchen .png" alt="Modern Luxury Kitchen">
                     <div class="portfolio-overlay">
                         <h3>Culinary Masterpiece</h3>
                         <p>Professional-grade chef's kitchen with custom walnut cabinetry and marble waterfall islands.</p>
