--- a/portfolios.html
+++ b/portfolios.html
@@ -173,17 +173,24 @@
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/13085168073109132956_0" alt="Luxury Master Bathroom">
+                    <img src="images/colonial home.png" alt="Luxury Master Bathroom">
                     <div class="portfolio-overlay">
-                        <h3>The Spa Retreat</h3>
+                        <h3>Colonial times</h3>
                         <p>An oasis of relaxation featuring a rainfall wet-room and heated stone flooring.</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="http://googleusercontent.com/image_collection/image_retrieval/17428385123028943440_0" alt="Modern Living Room">
+                    <img src="images/Modern Farmhouse_.png" alt="Modern Living Room">
                     <div class="portfolio-overlay">
-                        <h3>Open Concept Living</h3>
+                        <h3>Farm Living</h3>
+                        <p>Seamless transition between indoor comfort and outdoor entertaining spaces.</p>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="images/modern ranch.png" alt="Modern Living Room">
+                    <div class="portfolio-overlay">
+                        <h3>Open Concept Ranch</h3>
                         <p>Seamless transition between indoor comfort and outdoor entertaining spaces.</p>
                     </div>
                 </div>
