--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <section class="header">
         <h1>Grand View Custom Homes</h1> 
         <p>Crafting Legacies Through Superior Architecture & Design</p>
-            <a href="https://template-ready-static.onrender.com/" 
+            <a href="https://template-ready-static.onrender.com/dashboard.html" 
    style="
      display:inline-block;
      padding:12px 20px;
