--- a/portfolios.html
+++ b/portfolios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Portfolio | Grand View Custom Homes</title>
-    
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="images/GVCH_logo.png">
     <link rel="apple-touch-icon" href="favicon.png">
 
@@ -199,8 +199,11 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Grand View Custom Homes. Crafting Excellence in Every Square Foot.</p>
-    </footer>
+    <div class="footer-content">
+        <img src="images/AirStadt_logo orange.png" alt="Company Logo" class="footer-logo">
+        <p>&copy; 2026 Site Design by Airstadt. All rights reserved.</p>
+    </div>
+</footer>
 
 </body>
 </html>
