--- a/index.html
+++ b/index.html
@@ -4,159 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Builder Company | Custom Contracting</title><link rel="icon" type="image/png" href="images/GVCH_logo.png">
-    <style>
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #a9b8bb; 
-            color: #333;
-            /* Prevents horizontal scroll on animations */
-            overflow-x: hidden; 
-        }
-        .header {
-            background: linear-gradient(120deg, #004d40, #00796b);
-            color: #fff;
-            padding: 60px 20px;
-            text-align: center;
-            border-bottom: 6px solid #002e26;
-            box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.3);
-            font-family: 'Georgia', serif;
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            letter-spacing: 3px;
-            text-transform: uppercase;
-            margin: 0;
-            text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.5);
-        }
-
-        .header p {
-            font-size: 1.2em;
-            margin-top: 15px;
-            font-style: italic;
-            opacity: 0.9;
-        }
-
-        .nav {
-            display: flex;
-            justify-content: center;
-            background-color: #004d40;
-            padding: 15px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .nav a {
-            color: white;
-            margin: 0 20px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        .nav a:hover {
-            color: #80cbc4;
-        }
-
-        .container {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 70vh;
-            background: #2c3e50; /* Fallback if image doesn't load */
-        }
-
-        .house-image {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            filter: brightness(70%);
-        }
-
-        .overlay-left {
-            position: absolute;
-            top: 15%;
-            left: 5%;
-            width: 35%;
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 30px;
-            border-radius: 4px;
-            box-shadow: 10px 10px 0px #004d40;
-            color: #333;
-            z-index: 10;
-            text-align: left;
-        }
-
-        .new-section {
-            display: flex;
-            justify-content: space-around;
-            padding: 60px 20px;
-            background-color: #f4f7f6;
-        }
-
-        .subsection {
-            text-align: center;
-            flex: 1;
-            margin: 0 15px;
-            background-color: #ffffff;
-            border-top: 5px solid #00796b;
-            padding: 30px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        /* NEW PROCESS SECTION */
-        .process-section {
-            padding: 60px 20px;
-            background-color: #ffffff;
-            text-align: center;
-        }
-
-        .process-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            max-width: 1200px;
-            margin: 40px auto 0;
-        }
-
-        .process-step {
-            padding: 20px;
-        }
-
-        .step-number {
-            font-size: 2em;
-            color: #00796b;
-            font-weight: bold;
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .footer {
-            background-color: #002e26;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            position: relative;
-            width: 100%;
-        }
-
-        /* Animations */
-        .subsection:nth-child(1) { animation: slideInFromLeft 1.2s ease-out; }
-        .subsection:nth-child(3) { animation: slideInFromRight 1.2s ease-out; }
-
-        @keyframes slideInFromLeft {
-            from { transform: translateX(-50px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-        @keyframes slideInFromRight {
-            from { transform: translateX(50px); opacity: 0; }
-            to { transform: translateX(0); opacity: 1; }
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -181,15 +29,15 @@
     <section class="nav">
         <a href="#">Home</a>
         <a href="portfolios.html">Portfolios</a>
-        <a href="#">Our Process</a>
-        <a href="#">Contact Us</a>
+        <a href="ourProcess.html">Our Process</a>
+        <a href="contactus.html">Contact Us</a>
     </section>
 
     <section class="container">
         <section class="overlay-left">
             <h2>Built to Last</h2>
             <p>From modern minimalist estates to classic family manors, we specialize in high-performance contracting that prioritizes energy efficiency, structural integrity, and your unique lifestyle.</p>
-            <button style="background:#00796b; color:white; border:none; padding:10px 20px; cursor:pointer; font-weight:bold;">Start Your Consultation</button>
+            <button id="consultation-button" background:#00796b; color:white; border:none; padding:10px 20px; cursor:pointer; font-weight:bold;">Start Your Consultation</button>
         </section>
         <img src="house-image.jpg" alt="Luxury Custom Home" class="house-image">
     </section>
@@ -235,9 +83,14 @@
         </div>
     </section>
 
-    <section class="footer">
-        <p>&copy; 2025 Grand View Builders. All rights reserved. | 123 Builder Lane, City, State</p>
-    </section>
-
+    <footer class="footer">
+    <div class="footer-content">
+        <img src="images/AirStadt_logo orange.png" alt="Company Logo" class="footer-logo">
+        <p>&copy; 2026 Site Design by Airstadt. All rights reserved. | 123 Builder Lane, City, State</p>
+    </div>
+</footer>
+<script src="script/script.js"></script>
 </body>
+
+
 </html>
